--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,10 +9,13 @@ header{
   height: 70px;
   position: fixed;
 }
+body{
+  background: $one;
+  height: 100%;
+}
 #content{
   width: 100%;
-  height: 680px;
-  background: $one;
+  height: 100%;
 }
 .heading{
   width: 100%;
@@ -66,6 +69,49 @@ header{
       font-size: 18px;
       padding: 0 20px;
       text-align: justify;
+    }
+  }
+}
+
+@media only screen and (max-width: 800px) and (min-width: 641px){
+  .villages{
+    width: 90%;
+    margin: 5%;
+  }
+}
+
+@media only screen and (max-width: 640px) and (min-width: 401px) {
+  .villages{
+    width: 90%;
+    margin: 5%;
+    .card{
+      width: 46%;
+      margin: 1%;
+    }
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .heading{
+    font-size: 30px;
+    height: 40px;
+  }
+  .villages{
+    width: 90%;
+    margin: 5%;
+    .card{
+      width: 46%;
+      height: 135px;
+      margin: 1%;
+    }
+    .cardCt{
+      padding-top: 112px;
+      h2{
+        font-size: 20px;
+      }
+      p{
+        font-size: 13px;
+      }
     }
   }
 }
