--- a/scss/history.scss
+++ b/scss/history.scss
@@ -41,13 +41,6 @@ header{
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.5);
-  &.open{
-    display: block;
-    opacity: 1;
-    transition: 200ms all;
-    -webkit-transition: 200ms all;
-    -moz-transition: 200ms all;
-  }
 }
 .menuBtn{
   float: left;
@@ -116,7 +109,7 @@ header{
     text-align: center;
     padding-top: 50px;
   }
-  .history{
+  .content{
     width: 100%;
     padding: 40px;
     color: #555;
@@ -177,6 +170,15 @@ header{
       transition: 200ms ease-in all;
       -webkit-transition: 200ms ease-in all;
       -moz-transition: 200ms ease-in all;
+    }
+  }
+  #filter{
+    &.open{
+      display: block;
+      opacity: 1;
+      transition: 200ms all;
+      -webkit-transition: 200ms all;
+      -moz-transition: 200ms all;
     }
   }
   .menuBtn{
