--- a/css/history.css
+++ b/css/history.css
@@ -58,12 +58,6 @@ header {
   left: 0;
   right: 0;
   background: rgba(0, 0, 0, 0.5); }
-  #filter.open {
-    display: block;
-    opacity: 1;
-    transition: 200ms all;
-    -webkit-transition: 200ms all;
-    -moz-transition: 200ms all; }
 
 .menuBtn {
   float: left;
@@ -124,7 +118,7 @@ header {
     color: #eee;
     text-align: center;
     padding-top: 50px; }
-  #ct .history {
+  #ct .content {
     width: 100%;
     padding: 40px;
     color: #555;
@@ -176,6 +170,13 @@ header {
       transition: 200ms ease-in all;
       -webkit-transition: 200ms ease-in all;
       -moz-transition: 200ms ease-in all; }
+
+  #filter.open {
+    display: block;
+    opacity: 1;
+    transition: 200ms all;
+    -webkit-transition: 200ms all;
+    -moz-transition: 200ms all; }
 
   .menuBtn {
     display: block; }
