--- a/css/history.css
+++ b/css/history.css
@@ -46,7 +46,10 @@ header {
   height: 100%;
   background: #fff;
   position: fixed;
-  padding-top: 70px; }
+  padding-top: 70px;
+  overflow-y: auto; }
+  #sideNav .scroll {
+    height: 130%; }
 
 #filter {
   display: none;
