--- a/scss/history.scss
+++ b/scss/history.scss
@@ -83,7 +83,12 @@ header{
     background: #eee;
   }
 }
-
+.tab{
+  display: none;
+}
+#history{
+  display: block;
+}
 #ct{
   width: 56%;
   float: left;
