--- a/scss/history.scss
+++ b/scss/history.scss
@@ -32,7 +32,7 @@ header{
   padding-top: 70px;
   overflow-y: auto;
   .scroll{
-    height: 130%;
+    height: 100%;
   }
 }
 #filter{
@@ -82,6 +82,9 @@ header{
   &:hover{
     background: #eee;
   }
+  &.active{
+    background: #eee;
+  }
 }
 .tab{
   display: none;
@@ -96,7 +99,6 @@ header{
   top: 90px;
   left: 20%;
   margin: 0 2%;
-  background: #fff;
   .img{
     width: 100%;
     height: 250px;
@@ -154,6 +156,37 @@ header{
   }
 }
 
+#chngImg{
+  position: relative;
+  left: 20px;
+  bottom: -80px;
+  float: left;
+  cursor: pointer;
+}
+#chngHistory{
+  position: relative;
+  left: 20px;
+  top: 20px;
+  cursor: pointer;
+}
+.search{
+   input{
+     width: 100%;
+     box-sizing: border-box;
+     font-size: 18px;
+     padding: 5px 10px;
+   }
+}
+.listItem{
+  width: 100%;
+  box-sizing: border-box;
+  border: 1px solid #d5d5d5;
+  margin: 10px 0;
+  height: 200px;
+  background: #fff;
+}
+
+
 @media only screen and (max-width: 768px) {
   #rightNav{
     display: none;
@@ -179,6 +212,9 @@ header{
       transition: 200ms ease-in all;
       -webkit-transition: 200ms ease-in all;
       -moz-transition: 200ms ease-in all;
+    }
+    .scroll{
+      height: 130%;
     }
   }
   #filter{
